# posmanager

./: # Premi Invio 3 volte (percorso default, nessuna passphrase)  # Premi Invio 3 volte (percorso default, nessuna passphrase).pub  .env.local.example  .env.production.example  .gitignore  DEPLOY_LOCAL.md  DEPLOY_PROD.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.ssl.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/models/: __init__.py  base.py  cash_movement.py  cash_session.py  company.py  company_settings.py  cost_center.py  customer.py  daily_closure.py  deletion_log.py  digital_transaction.py  expense.py  inventory_item.py  main_base.py  receipt_payment.py  release_meta.py  release_sales.py  shop_receipt.py  shop_settings.py  user.py
backend/app/routers/: admin.py  cassa.py  closures.py  cost_centers.py  customers.py  expenses.py  integrations.py  inventory.py  receipts.py  sessions.py  settings.py  transactions.py  users.py
backend/app/schemas/: cash_movement.py  cash_session.py  common.py  cost_center.py  customer.py  daily_closure.py  digital_transaction.py  expense.py  shop_receipt.py  shop_settings.py
backend/app/services/: discogs_enrich_service.py  discogs_lookup_service.py  discogs_orders_service.py  discogs_scraper_service.py  discogs_sync_service.py  enrich_worker.py  entratel.py  (+1 more)
backend/scripts/: migrate_sqlite_to_mysql.py
(+52 files in other folders)
